--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/react"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kPatch/getting-started-js.git"
@@ -21,7 +27,19 @@
     "url": "https://github.com/kPatch/getting-started-js/issues"
   },
   "homepage": "https://github.com/kPatch/getting-started-js#readme",
+  "dependencies": {
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
+  },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
